Bug 156105 - Percents behave wrong in list level prefix/suffix
Summary: Percents behave wrong in list level prefix/suffix
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.5.2 release
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:24.8.0
Keywords: bibisectNotNeeded, regression
Depends on:
Blocks: Bullet-Number-Outline-Lists
  Show dependency treegraph
 
Reported: 2023-06-30 16:34 UTC by Mike Kaganski
Modified: 2024-05-20 13:53 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
A list with prefix/suffix having % (9.22 KB, application/vnd.oasis.opendocument.text)
2023-06-30 16:34 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2023-06-30 16:34:24 UTC
Created attachment 188139 [details]
A list with prefix/suffix having %

The attached document has a list, which has prefix "(%)" and suffix "[%]". Also, it has level 3 set to no numbering.

Prior to commit bf2b46aa15665dde63ceff4e7686b99b3990354f (tdf#146257: sw: better handling for list numbering = NONE), the prefix and suffix appeared in all levels correctly, including level 3. Since the said commit, the prefix in level 3 is cut to "(", and the suffix to "]".
Comment 1 Justin L 2024-05-16 14:39:24 UTC
repro 24.8+

I first see the prefix/suffix reduced in the UI in 7.3 bibisect (backported to 7.2)
commit aa5c6d127559912ad60a63fbd972b78fb8f9691b
Author: Vasily Melenchuk on Mon Jun 14 14:27:56 2021 +0300
    new ODF numbered list parameter loext:num-list-format

I confirm comment 0's 7.4 bisect (backported to 7.2.5) for the 3rd level's loss of prefix/suffix in the document itself.
Comment 2 Commit Notification 2024-05-20 13:41:12 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/047e3f62901ae89da30bf1367218104e57439f70

related tdf#156105 sw UI: recognize '%' in numbering prefix/suffix

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-05-20 13:41:14 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/65e226aff6a946ae4884b9f5afdccaa1c745bcd4

tdf#156105 sw: trust SvxNumberFormat GetPrefix/GetSuffix

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-05-20 13:41:17 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a94db2e3b6e130fe90de31cbd909ce54f5450601

tdf#156105 sw: make SvxNumberFormat GetPrefix/Suffix more trustworthy

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Justin L 2024-05-20 13:53:36 UTC
Comment 3's fix is the one that takes care of what OP described.